WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268634
[iOS] YouTube does not provide an AirPlay button in fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=268634
Summary
[iOS] YouTube does not provide an AirPlay button in fullscreen mode
Jer Noble
Reported
2024-02-02 09:45:30 PST
[iOS] YouTube does not provide an AirPlay button in fullscreen mode
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-02-02 09:45:38 PST
<
rdar://problem/121471373
>
Jer Noble
Comment 2
2024-02-02 09:48:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23753
EWS
Comment 3
2024-02-05 15:16:42 PST
Committed
274117@main
(f2404c166790): <
https://commits.webkit.org/274117@main
> Reviewed commits have been landed. Closing PR #23753 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug