[iOS] YouTube does not provide an AirPlay button in fullscreen mode https://bugs.webkit.org/show_bug.cgi?id=268634 rdar://121471373

Reviewed by Brent Fulgham and Aditya Keerthi.

Add a quirk to disable the Fullscreen API on YouTube.com (and youtube.com embeds).

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldDisableElementFullscreenQuirk const):

Canonical link: https://commits.webkit.org/274117@main